--- a/mot1/css/style.css
+++ b/mot1/css/style.css
@@ -780,7 +780,21 @@ address{
     text-align: center;
     padding: 34px 0;
 }
+@media (max-width: 1366px ){
+    .bikes__slider .slick-arrow.slick-prev{
+       
+        left: 0;
+     
+     }
+     /* Стрелка вправо */
+     .bikes__slider .slick-arrow.slick-next{
+        
+        
+        right: 0;
+     }
+    
 
+}
 
 @media (max-width: 1024px ){
 
@@ -803,17 +817,6 @@ address{
     .sign__inner--item{
         margin-bottom: 20px;
     }
-    .bikes__slider .slick-arrow.slick-prev{
-       
-        left: 0;
-     
-     }
-     /* Стрелка вправо */
-     .bikes__slider .slick-arrow.slick-next{
-        
-        
-        right: 0;
-     }
     
 }
 
