--- a/mot1/css/style.css
+++ b/mot1/css/style.css
@@ -1006,6 +1006,8 @@ address{
         
         width: 100%;
         max-width: 768px;
+        overflow: scroll;
+        height: 100vh;
 
     }
 
